--- a/main.html
+++ b/main.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Dog lover</h1>
+	<img src="https://cdn.britannica.com/84/232784-050-1769B477/Siberian-Husky-dog.jpg" alt="dog image">
     <script type="text/javascript" src="./script.js">
 </script>
 
